fixed menu overlapping

--- a/assets/css/_style.styl
+++ b/assets/css/_style.styl
@@ -1328,6 +1328,9 @@ fieldset[disabled] .btn-primary.active
   .contact .quicklinks
     margin 0 auto
 
+.slaask-widget
+  z-index: 9999999999 !important
+
 #slaask-button
   bottom 55px
 
@@ -1364,9 +1367,9 @@ fieldset[disabled] .btn-primary.active
   @media screen and (max-width: 768px)
     padding-right 0px
 
-.entries 
+.entries
   .entry
-    h3 
+    h3
       color #333
       font-weight 700
     .entry-header
@@ -1374,19 +1377,19 @@ fieldset[disabled] .btn-primary.active
         min-width 100%
     .entry-body
       background #fff
-      line-height 28px 
+      line-height 28px
       padding 1em 2.75em 1em 2.75em
       -webkit-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
       -moz-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
       box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
       p.date
         margin 0.5em 0 0 0
-        padding-bottom 0.5em 
+        padding-bottom 0.5em
         color #cfcfcf
         b
           color #757575
           font-style normal
-          font-weight 400   
+          font-weight 400
     footer
       margin-top 3em
       margin-bottom 2em
@@ -1397,7 +1400,7 @@ fieldset[disabled] .btn-primary.active
           display block
 .box.post
     background #fff
-    line-height 28px 
+    line-height 28px
     padding 2.75em 3.5em 2.75em 3.5em
     -webkit-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
     -moz-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
@@ -1408,18 +1411,18 @@ fieldset[disabled] .btn-primary.active
     padding 3px
   .title
     font-size 3em
-    font-weight 600 
+    font-weight 600
   .info
     color #cfcfcf
     b
       color #757575
-      font-weight 400    
-  .image 
+      font-weight 400
+  .image
     min-height 400px
     background-position center
     background-repeat no-repeat
     background-size 100%
-  .image.featured  
+  .image.featured
     // margin -2.75em -2em 2.75em -2em
     margin 1.5em 0em 2.75em 0em
     min-width 100%
@@ -1427,19 +1430,19 @@ fieldset[disabled] .btn-primary.active
     border 1px solid #ddd !important
     padding 5px
     min-height auto !important
-    
+
 .sidebar-right
   .entries
     background #fff
     -webkit-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
     -moz-box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
     box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
-  .entry-header 
+  .entry-header
     background #03a9f4
-    padding 12px 35px 12px 25px 
+    padding 12px 35px 12px 25px
     h3
       color #fff !important
-      font-weight 600 
+      font-weight 600
       margin-top 5px
       margin-bottom 10px
       .glyph-icon
@@ -1453,14 +1456,14 @@ fieldset[disabled] .btn-primary.active
     padding 25px 15px
     h4
       font-weight 300
-      line-height 24px 
+      line-height 24px
       margin-top 0px
       @media screen and (max-width: 768px)
         font-size 24px
         line-height 28px
         margin 15px auto
-        margin-bottom 35px 
-  
+        margin-bottom 35px
+
     .entry
       margin-bottom 25px
       a
